@@ -313,6 +313,7 @@ sub is_pillai {
 }
 sub is_primitive_root {
   my($a,$n) = @_;
+  return 0 if $n == 0;
   $n = -$n if defined $n && $n < 0;
   $a %= $n if defined $a && $a < 0;
   _validate_positive_integer($a);
